Correct the width of the language filter so all entries are one line and there is no horizontal scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -299,7 +299,8 @@ footer {
   margin-top: -1em;
   max-height: 13em;
   overflow: scroll;
-  width: 15em;
+  width: 18em;
+  overflow-x: hidden;
 }
 
 .filterHeader {
